# torch-einops-utils

./: README.md  pyproject.toml
tests/: test_utils.py
torch_einops_utils/: __init__.py  torch_einops_utils.py
